# StreamingAppForMusic

./: .gitignore  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 01cef15365ec_initial.py  21e856859db6_first_migration.py
src/: database.py  main.py
src/auth/: auth_scripts.py  models.py  routers.py  schemas.py  token_config.py
src/streaming/: models.py  schemas.py
src/streaming/routers/: genres.py  musician.py  playlist.py  tracks.py
tests/: test_genres.py  test_musician.py  test_playlist.py  test_tracks.py  test_users.py
tests/auth/: user_tests.py
tests/streaming/: genres.py  musician.py  tracks.py
